--- a/.github/workflows/deploy-on-production.yaml
+++ b/.github/workflows/deploy-on-production.yaml
@@ -74,7 +74,7 @@ jobs:
           make doctrine/database/create
       - name: Init application
         run: |
-          cd ./dev/
+          cd ./prod/
           make console app:system:init
       - name: Cache clear
         run: |
