--- a/docker/nginx/site.prod.conf
+++ b/docker/nginx/site.prod.conf
@@ -11,12 +11,12 @@ server {
         proxy_pass http://swagger:8080/;
     }
 
-    location /minio/ {
+    location /minio/console/ {
         chunked_transfer_encoding off;
         proxy_connect_timeout 300;
         proxy_http_version 1.1;
 
-        proxy_pass http://minio:9000/;
+        proxy_pass http://minio:9001/;
 
         proxy_set_header Connection "";
         proxy_set_header X-Real-IP $remote_addr;
