--- a/env/.env.prod
+++ b/env/.env.prod
@@ -6,6 +6,7 @@ DOCKER_NGINX_PORT=12020
 DOCKER_MINIO_CONSOLE=https://env-816140.prod.pwsb.fr/minio/console
 DOCKER_MINIO_ENDPOINT=https://env-816140.prod.pwsb.fr/minio
 DOCKER_MINIO_KEY=minio
+DOCKER_MINIO_PORT=12021
 
 MAILER_DSN=smtp://maildev:1025?verify_peer=0
 MESSENGER_TRANSPORT_DSN=redis://redis:6379
