--- a/env/.env.dev
+++ b/env/.env.dev
@@ -1,10 +1,10 @@
 APP_ENV=dev
-APP_URI=https://env-816140.dev.pwsb.fr
+APP_URI=https://env-765698.dev.pwsb.fr
 
-DOCKER_DATABASE_URI=https://env-816140.dev.pwsb.fr/phpmyadmin/
+DOCKER_DATABASE_URI=https://env-765698.dev.pwsb.fr/phpmyadmin/
 DOCKER_NGINX_PORT=11020
-DOCKER_MINIO_CONSOLE=https://env-816140.dev.pwsb.fr/minio/console
-DOCKER_MINIO_ENDPOINT=https://env-816140.dev.pwsb.fr/minio
+DOCKER_MINIO_CONSOLE=https://env-765698.dev.pwsb.fr/minio/console
+DOCKER_MINIO_ENDPOINT=https://env-765698.minio.dev.pwsb.fr
 DOCKER_MINIO_KEY=minio
 DOCKER_MINIO_PORT=11021
 
