--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -1,6 +1,5 @@
 parameters:
     APP_URI: '%env(APP_URI)%'
-    MINIO_ENDPOINT: '%env(MINIO_ENDPOINT)%'
 
 services:
     _defaults:
@@ -31,6 +30,12 @@ services:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
         arguments: [ '@security.authorization_checker', '@security.token_storage',  '@router' ]
 
+    App\Application\Services\AWSS3Service:
+        arguments:
+            $endpoint: '%env(resolve:MINIO_ENDPOINT)%'
+            $key: '%env(resolve:MINIO_KEY)%'
+            $secret: '%env(resolve:MINIO_SECRET)%'
+
     App\Application\Services\MicrosoftService:
         arguments: ['@session']
 
@@ -50,7 +55,7 @@ services:
     Aws\S3\S3Client:
         arguments:
             - version : 'latest'
-              region: 'eu-east-1'
+              region: 'us-east-1'
               endpoint: '%env(resolve:MINIO_ENDPOINT)%'
               credentials:
                   key: '%env(resolve:MINIO_KEY)%'
