--- a/.github/workflows/deploy-on-development.yaml
+++ b/.github/workflows/deploy-on-development.yaml
@@ -27,7 +27,7 @@ jobs:
         if: steps.check-directory.outputs.exist != 'true'
         run: |
           git clone git@github.com:tchevalleraud/configuration-network-manager.git
-          mv symfony-docker-project/ dev/
+          mv configuration-network-manager/ dev/
           cd ./dev/
           git checkout develop
       - name: Update environment
