--- a/.github/workflows/deploy-on-production.yaml
+++ b/.github/workflows/deploy-on-production.yaml
@@ -27,7 +27,7 @@ jobs:
         if: steps.check-directory.outputs.exist != 'true'
         run: |
           git clone git@github.com:tchevalleraud/configuration-network-manager.git
-          mv symfony-docker-project/ prod/
+          mv configuration-network-manager/ prod/
           cd ./prod/
           git checkout master
       - name: Update environment
